# molecular-representations

./: .gitignore  0_nos2.xyz  README.md  pairwise_distance.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: tests.yml
source/: atom_indexation.py  atom_mapping.py  molecule.py  pdb_parser.py  psf_parser.py  xyz_parser.py
src/: atom_array.py  molecule.py
src/deprc/: pairwise_distance.py
src/molecular_representations/: __init__.py  atom_array.py  molecule.py
src/molecular_representations/methods/: io.py  ml.py  topology.py  visualization.py
tests/: test_angles.py  test_atom_array.py  test_bonds.py  test_molecule.py  test_topology_coordinates.py
