[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molecular_representations"
version = "0.1.0"
description = "A Python library for representing and manipulating molecular structures"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Tobias Fritz", email = "your.email@example.com" }
]
dependencies = [
    "numpy>=1.20.0,<2.0.0",  # Pin to NumPy 1.x
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "torch>=1.9.0",
    "torch-geometric>=2.0.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=0.900",
    "pylint>=2.12.0",
    "black>=22.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
